SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

SQL result: New right right mouse menu "Show column details ..."

File export: Export file and command text fields were changed into drop downs with history.

SQL result: Made several labels on Info tab copyable.

Saved Sessions: Name of current Saved Session is displayed in SQuirreL's main window title.

Export of multiple SQL results.
  When exporting to MS Excel, multiple data sheets/tabs in the same file are created.
  When exporting to other formats, multiple files are created.
  The export dialog allows to name sheets/tabs or files respectively.
  Howto:
  To export multiple SQL results right click or open tools popup (ctl+t) and choose "sql2file"
  on multiple SQL queries (separated by statement separators) to open the file export dialog.
  To export multiple SQL result UI tables execute multiple SQLs (ctrl+enter).
  Then right click one of the UI result tables to open the file export dialog.

Bug fixes:

SQL result table function "Mark consecutive duplicate values in columns"
  was erroneous when columns where moved.

SQL result: Right right mouse menu "Show column details ..." now works for empty SQL result tables, too.

SQL result --> tab Info: Execution time and row count weren't displayed for long SQL strings.

Hibernate Plugin: Unknown object or mapping types used to cause ClassNotFoundExceptions
  when transported from the Hibernate process to SQuirreL's process.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/6
  Exporting SQLs to file (open tools popup (ctl+t) and choose "sql2file") did not work
  for the multi source UnityJDBC driver (https://unityjdbc.com) / MultisSource Plugin.

#481 (in feature requests) Dark theme now applies to Graphs (Entity Relationship diagrams), too.
