@@ -1,0 +1,2 @@
+AppStartupSessionStarter.no.alias.for.jdbcurl=Could not find an Alias for the JDBC-URL {0} passed on the command line.
+AppStartupSessionStarter.no.alias.for.alias.name=Could not find an Alias named "{0}" which was passed on the command line.
